build(bazel): build fuseki image with rules_oci (Phase 5)
Fourth and last DSP container image on Bazel: modules/fuseki/BUILD.bazel
packages the Apache Jena Fuseki distribution (fetched hermetically via a new
MODULE.bazel http_archive, replacing the Dockerfile's build-time curl) and
consolidates the base image and OTel/Pyroscope versions onto the same pins
knora-api/dsp-ingest already use, closing drift between the two. Verified
live: TDB2 write/read/persist-across-restart on the new Java 25 base, the
full 5-container compose stack healthy, and OTel spans correctly nested in
the same distributed trace as the api service.

tools/oci/check_image_versions.sh gained two checks (fuseki dist version,
fuseki image tag) after adversarial review (5 parallel lenses) found the
tag baked into BUILD.bazel's labels/env/repo_tags had no drift guard.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>